nav gap fixed top:-2px

--- a/index.css
+++ b/index.css
@@ -45,8 +45,8 @@ header {
 .nav {
     display: flex;
     position: sticky;
-    top: 0px;
-    padding: 2px 10px;
+    top: -2px;
+    padding: 5px 15px 2px 15px;
     background-color: var(--fondo-suave);
 }
 
